--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "grunt": "~0.3.9"
+    "grunt": "~0.3.9",
+    "jQuery": "~1.7.2",
+    "which": "~1.0.5",
+    "mkdirp": "0.3.3"
   },
   "devDependencies": {
     "grunt": "~0.3.9"
