--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "grunt": "~0.3.9",
     "jQuery": "~1.7.2",
     "which": "~1.0.5",
-    "mkdirp": "0.3.3"
+    "mkdirp": ">=0.3.3",
+    "xmlhttprequest": ">=1.4.2",
+    "jsdom": ">=0.2.14"
   },
   "devDependencies": {
     "grunt": "~0.3.9"
