--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-imagine",
   "description": "Grunt tasks for optimizing & inlining images",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "http://asciidisco.github.com/grunt-imagine/",
   "author": {
     "name": "asciidisco",
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "grunt": "~0.3.9",
-    "jQuery": "~1.7.2",
+    "jQuery": ">=1.7.4",
     "which": "~1.0.5",
     "mkdirp": ">=0.3.3",
     "xmlhttprequest": ">=1.4.2",
