--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "which": "~1.0.5",
     "mkdirp": ">=0.3.3",
     "xmlhttprequest": ">=1.4.2",
-    "jsdom": ">=0.2.14"
+    "jsdom": ">=0.2.14",
+    "mime": ">=1.2.7"
   },
   "devDependencies": {
     "grunt": "~0.3.9"
