--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test": "grunt lint test --verbose"
   },
   "dependencies": {
+    "async": "~0.1.22",
     "grunt": "~0.3.9",
     "jQuery": ">=1.7.4",
     "which": "~1.0.5",
