--- a/package.json
+++ b/package.json
@@ -21,26 +21,19 @@
       "url": "http://asciidisco.github.com/grunt-imagine//blob/master/LICENSE-MIT"
     }
   ],
-  "main": "grunt.js",
+  "main": "Gruntfile.js",
   "bin": "bin/grunt-imagine",
   "engines": {
-    "node": ">=0.6.0"
+    "node": ">=0.8.0"
   },
   "scripts": {
-    "test": "grunt lint test --verbose"
-  },
-  "dependencies": {
-    "async": "~0.1.22",
-    "grunt": "~0.3.9",
-    "jQuery": ">=1.7.4",
-    "which": "~1.0.5",
-    "mkdirp": ">=0.3.3",
-    "xmlhttprequest": ">=1.4.2",
-    "jsdom": ">=0.2.14",
-    "mime": ">=1.2.7"
+    "test": "grunt test --verbose"
   },
   "devDependencies": {
-    "grunt": "~0.3.9"
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.7.0",
+    "grunt-contrib-nodeunit": "~0.2.2",
+    "grunt-contrib-watch": "~0.5.3"
   },
   "keywords": [
     "gruntplugin"
