Replaced grunt.util._ (deprecated) with lodash
Replaced mkdirp module with grunt.file.mkdir (less dependencies)

Replaced jQuery with jquery module (is at 1.8.3 insted of 1.7.4 also
allows to drop jsdom from dependencies)

Implemented very basic tests (to feed travis a bit :))

Outsourced jshint config

--- a/package.json
+++ b/package.json
@@ -29,8 +29,15 @@
   "scripts": {
     "test": "grunt test --verbose"
   },
-  "devDependencies": {
+  "dependencies": {
     "grunt": "~0.4.1",
+    "which": "~1.0.5",
+    "lodash": "~2.2.1",
+    "mime": "~1.2.11",
+    "async": "~0.2.9",
+    "jquery": "~1.8.3"
+  },
+  "devDependencies": {
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-nodeunit": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3"
