--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "lodash": "~2.2.1",
     "mime": "~1.2.11",
     "async": "~0.2.9",
-    "jquery": "~1.8.3",
-    "phantomjs": "~1.9.2-2"
+    "phantomjs": "~1.9.2-2",
+    "cheerio": "~0.12.4"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.7.0",
