--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
-  - 0.10
+  - "0.8"
+  - "0.10"
+  - "0.11"
 before_script:
-  - "export DISPLAY=:99.0"
   - npm install -g grunt-cli
+matrix:
+  allow_failures:
+    - node_js: "0.11"
