--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "lodash": "~2.4.1",
     "mime": "~1.2.11",
     "async": "~0.9.0",
-    "phantomjs": "~1.9.7-15",
+    "phantomjs": "~2.1.7",
     "cheerio": "~0.17.0"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-jshint": "~0.12.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-watch": "~0.6.1"
   },
